k3s/apps/linkding/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding-deployment
  namespace: linkding
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.41.0-plus-alpine
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: linkding-data
          mountPath: /etc/linkding/data
      volumes:
      - name: linkding-data
        persistentVolumeClaim:
          claimName: linkding-data-pvc
