k3s/apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-service
  namespace: linkding
spec:
  ports:
    - port: 9090
      targetPort: 9090
  type: NodePort
